# solitaire

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
src/: graphics.cpp  main.cpp  nsolitaire.cpp  screen.cpp  screen.h  solitaire.cpp  solitaire.h
src/cards/: card.cpp  card_sprites.cpp  cards.h  deck.cpp  pile.cpp  pile_strategies.cpp  pile_strategies.h
src/engine/: engine.h  graphics.cpp  input.cpp  text.cpp  utilities.cpp
src/games/: base_game.cpp  free_cell.cpp  game_state.cpp  games.h  pile_builder.cpp  playground.cpp
src/scenes/: base_scene.cpp  game_scene.cpp  pause_scene.cpp  scene.h  scene_manager.cpp  scenes.h
src/ui/: menu.cpp
